# panda-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  compose.yaml  pyproject.toml
config/: messages.yaml  rules.yaml
docs/: PLAN.md  README.md  RULES_AND_REASONS.md
src/panda_bot/: __init__.py  ai.py  classifier.py  context.py  copywriter.py  domain.py  engine.py  gateway.py  main.py  repository.py  service.py  settings.py  shadow_export.py
src/panda_bot/adapters/: __init__.py  feishu.py
tests/: conftest.py  test_ai.py  test_classifier.py  test_compose.py  test_context.py  test_engine.py  test_feishu_adapter.py  test_main.py  test_repository.py  test_service.py  test_settings.py  test_shadow_export.py
