[project]
name = "panda-bot"
version = "0.1.0"
description = "飞书群聊中的事件驱动型下班氛围机器人"
readme = "docs/README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "lark-channel-sdk==1.2.0",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0.2,<7",
]

[project.scripts]
panda-bot = "panda_bot.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.2,<2",
    "ruff>=0.14,<1",
    "tzdata>=2025.2",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_bot"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
